# WorkflowMonitor

./: .gitignore  ANDROID_DEV.md  COMPONENTS_TOKENS.md  Cargo.toml  DEVELOPING.md  IA_WIREFRAMES.md  IMPLEMENTATION_CHECKLIST.md  PRD.md  README.md  RELEASING.md  VISUAL_STYLE.md  WINDOWS_DEV.md  design-tokens.json
.github/workflows/: release-windows.yml
android/: README.md
android/RecorderPhone/: settings.gradle.kts
android/RecorderPhone/app/: build.gradle.kts
android/RecorderPhone/gradle/: libs.versions.toml
collectors/: README.md
collectors/windows_collector/: Cargo.toml  README.md
collectors/windows_collector/src/: main.rs
core/: README.md
core/recorder_core/: Cargo.toml
core/recorder_core/src/: main.rs
dev/: README.md  ingest-server.mjs  install-recorderphone-protocol.ps1  overlay-ui-to-windows.mjs  overlay-ui.ps1  package-windows.ps1  run-agent.ps1  run-android.ps1  run-collector.ps1  run-core.ps1  run-core.sh  run-desktop.ps1  run-ui.ps1  stop-agent.ps1  sync-to-windows.mjs  wipe-core-db.ps1  wipe-core-db.sh
extension/: README.md  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js  service_worker.js
recorderphone_ui/api/: core_client.dart
recorderphone_ui/lib/: main.dart
recorderphone_ui/lib/api/: core_client.dart
recorderphone_ui/lib/screens/: settings_screen.dart  today_screen.dart
recorderphone_ui/screens/: app_shell.dart  settings_screen.dart  today_screen.dart
recorderphone_ui/theme/: recorder_theme.dart
release-notes/: v0.1.1.md  v0.1.2.md  v0.1.3.md
samples/android/: RecorderTheme.kt
samples/windows/winui/: README.md  RecorderTheme.xaml
samples/windows/wpf/: README.md  RecorderColors.Dark.xaml  RecorderColors.Light.xaml  RecorderTokens.xaml
schemas/: ingest-event.schema.json
ui_flutter/: README.md
ui_flutter/template/: pubspec.yaml
ui_flutter/template/lib/: main.dart
ui_flutter/template/lib/api/: core_client.dart
ui_flutter/template/lib/mobile/: mobile_models.dart  mobile_prefs.dart  mobile_quick_review_sheet.dart  mobile_review_screen.dart  mobile_settings_screen.dart  mobile_shell.dart  mobile_store.dart  mobile_today_screen.dart  mobile_usage.dart  mobile_widgets.dart
ui_flutter/template/lib/screens/: app_shell.dart  reports_screen.dart  search_screen.dart  settings_screen.dart  today_screen.dart
ui_flutter/template/lib/theme/: recorder_theme.dart  tokens.dart
ui_flutter/template/lib/tutorial/: app_tutorial.dart
ui_flutter/template/lib/utils/: desktop_agent.dart  desktop_agent_io.dart  desktop_agent_stub.dart  format.dart  platform_args.dart  platform_args_io.dart  platform_args_stub.dart  (+12 more)
windows/: README.md  RecorderPhone.Windows.sln
windows/src/RecorderPhone.Windows/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RecorderPhone.Windows.csproj
(+16 files in other folders)
