[package]
name = "recorder_core"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Pin below 0.3.45 to avoid pulling in Rust 2024 edition crates (time-core 0.1.7+)
# which break older Windows toolchains (e.g. Cargo 1.82).
time = { version = ">=0.3.0, <0.3.45", features = ["parsing", "formatting"] }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
